[gd_scene load_steps=2 format=2]

[ext_resource path="res://nodes/TestRoom/TestRoom.gd" type="Script" id=1]

[node name="TestRoom" type="Node"]
script = ExtResource( 1 )

[node name="Spatial" type="Spatial" parent="."]
editor/display_folded = true
transform = Transform( 0.793976, -0.607948, 0, 0.607948, 0.793976, 0, 0, 0, 1, 0, 0, 0 )

[node name="origin" type="Position3D" parent="Spatial"]

[node name="xAxis" type="Position3D" parent="Spatial"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, 0 )

[node name="yAxis" type="Position3D" parent="Spatial"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )

[node name="zAxis" type="Position3D" parent="Spatial"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1 )

[node name="u" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 5.20585, 0.43922, 0 )
cast_to = Vector3( -0.389925, 7.87419, 0 )

[node name="i" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.29415, 2.86922, 0 )
cast_to = Vector3( 7.5, -2.43, 0 )

